test/corpus/basic.txt
==================
Function declaration
==================

fn main() {
}

---

(source_file
  (declaration
    (function_declaration
      (identifier)
      (param_list)
      (block_expr))))

==================
Struct declaration
==================

pub struct Point[T] {
  x : T
  y : T
}

---

(source_file
  (declaration
    (struct_declaration
      (visibility)
      (type_identifier)
      (type_parameters (type_parameter (identifier)))
      (field_def (identifier) (type_identifier))
      (field_def (identifier) (type_identifier)))))

==================
Enum declaration
==================

pub enum Color {
  Red
  Green
  Rgb(Int, Int, Int)
}

---

(source_file
  (declaration
    (enum_declaration
      (visibility)
      (type_identifier)
      (enum_variant (constructor (type_identifier)))
      (enum_variant (constructor (type_identifier)))
      (enum_variant (constructor (type_identifier)) (builtin_type) (builtin_type) (builtin_type)))))

==================
Type alias
==================

pub type IntAlias = Int

---

(source_file
  (declaration
    (type_alias
      (visibility)
      (type_identifier)
      (builtin_type))))

==================
Value declaration
==================

let answer = 42

---

(source_file
  (value_declaration
    (identifier)
    (number_literal)))

==================
Suberror declaration
==================

pub suberror JsonError {
  InvalidSyntax(String)
}

---

(source_file
  (declaration
    (suberror_declaration
      (visibility)
      (type_identifier)
      (enum_variant (constructor (type_identifier)) (builtin_type)))))
